<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mymp3music</string>


    <string name="appSDK_applovin" translatable="false">rtLx3DwscONhaiDrB6IpS9vQk1kA5AA8DIQBt33d-r3_7ykfZw4tVCgLzgy9tOGGOkIz6Ik1FTxVL95RmUfw8R</string>
    <string name="add_song">Add your songs</string>
    <string name="add_to_love_song_done">Added to favorite song playlist</string>
    <string name="android_animations_lib_name">AndroidAnimations</string>

    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cant_delete_playlist">Cannot delete the playlist</string>
    <string name="cant_not_update">Cantnot update the playlist name</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="chose">Choose</string>
    <string name="chose_playlist">Choose playlist</string>
    <string name="chose_time">Choose time</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.crashlytics.android.build_id">08ae349a393d4fgfgcdfaa96bd188a485e08</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="default_filedownloader_notification_content">FileDownloader is running.</string>
    <string name="default_filedownloader_notification_title">FileDownloader</string>
    <string name="default_web_client_id">9573429241-drdreb4l7im9cb6iiqfggfnmr2knjggdpol6.apps.googleusercontent.com</string>
    <string name="delete_from_playlist">Delete from playlist</string>
    <string name="delete_love_song_done">Deleted from playlist</string>
    <string name="delete_playlist">The playlist has been deleted</string>
    <string name="done">Done</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="dsv_ex_msg_adapter_wrong_recycler">InfiniteScrollAdapter is supposed to work only with DiscreteScrollView</string>
    <string name="dsv_ex_msg_dont_set_lm">"You should not set LayoutManager on DiscreteScrollView.class instance. Library uses a special one. Just don't call the method."</string>
    <string name="empty_search">No song found!</string>
    <string name="enter_name_playlist">Enter playlist name</string>
    <string name="enter_search_text">Please enter the keywords</string>
    <string name="error_icon_content_description">Error</string>

    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="failed">Failed</string>
    <string name="favorite_song">Favorite songs</string>
    <string name="firebase_database_url">https://eskaylation-musicdownloader.firebaseio.com</string>
    <string name="gcm_defaultSenderId">9573429241</string>
    <string name="get_permission">Get permission</string>
    <string name="google_api_key">AIzaSyAjAJw3G7MM-CEgm9ggPvssx5s_-sYMr47b4</string>
    <string name="google_app_id">1:9573429241:android:8d4ec04gg852241870ee1728</string>
    <string name="google_crash_reporting_api_key">AIzaSyAjAJw3ggG7MM-CEgm9Pvssx5s_-sYMr47b4</string>
    <string name="google_storage_bucket">eskaylaftion-musicdownlggfoader.appspot.com</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="input_name">"Enter song's title"</string>
    <string name="item_view_role_description">Tab</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">"%1$s o'clock"</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="material_timepicker_select_time">SELECT TIME</string>
    <string name="minute">Minute</string>

    <string name="nav_app_bar_navigate_up_description">Navigate up</string>
    <string name="nav_app_bar_open_drawer_description">Open navigation drawer</string>
    <string name="need_permission">You need permissions to use the application</string>
    <string name="new_playlist">Create new song playlist</string>
    <string name="no_song_to_play">Songs empty!</string>
    <string name="offline_notification_text">Tap to open ad</string>
    <string name="offline_notification_title">View the ad you saved when you were offline</string>
    <string name="offline_opt_in_confirm">OK</string>
    <string name="offline_opt_in_confirmation">"You'll get a notification with the link when you're back online"</string>
    <string name="offline_opt_in_decline">No thanks</string>
    <string name="offline_opt_in_message">"We'll send you a notification with a link to the advertiser site."</string>
    <string name="offline_opt_in_title">"Open ad when you're back online."</string>

    <string name="play_next">Play next</string>
    <string name="please_chose_other_name">Please update with another name!</string>
    <string name="please_enter_playlist">Please enter the playlist name</string>
    <string name="project_id">eskaylggation-musiggcdownloader</string>
    <string name="rename">Rename playlist</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>

    <string name="second">Seconds</string>
    <string name="set_ringtone_error">Ringtone setting error!</string>
    <string name="set_ringtone_success">Set ringtone successfully!</string>
    <string name="set_wallpaper_successfull">Set wallpaper successfully!</string>
    <string name="share">Share</string>
    <string name="share_content">I really like this app, download and use it</string>
    <string name="share_subject">Share the application</string>
    <string name="song_exist">The song already exists in playlist!</string>

    <string name="stop_music_in">Stop music in</string>
    <string name="tedpermission_close">Close</string>
    <string name="tedpermission_confirm">Confirm</string>
    <string name="tedpermission_setting">Setting</string>
    <string name="test">Green</string>
    <string name="theme">Themes</string>
    <string name="this_song_downloaded">The song has been downloaded !</string>
    <string name="time_default">Default</string>
    <string name="timer_music">Music off timer</string>
    <string name="tit_album">Albums</string>
    <string name="tit_artist">Song Artist</string>
    <string name="tit_folder">Folders</string>
    <string name="tit_playlist">Songs Playlists</string>
    <string name="tit_policy">Privacy policy</string>
    <string name="tit_song">"My Music"</string>
    <string name="toast_message">Toast message</string>
    <string name="turn_offtimmer">Turn off the music in</string>
    <string name="txt_accept">Save</string>
    <string name="txt_add_to_playlist">Add to playlist</string>
    <string name="txt_artist">Artist</string>
    <string name="txt_ask_delete">Do you want to delete this file?</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_cant_delete_file">Cannot delete this file!</string>
    <string name="txt_check_connection">No internet! Please check your internet connection!</string>
    <string name="txt_content_rating">We are trying to make the app better! Would you please give us a 5-star rating?</string>
    <string name="txt_delete">Delete playlist</string>
    <string name="txt_delete_file_successfull">The song was deleted!</string>
    <string name="txt_detail">Details</string>
    <string name="txt_download_done">Download completed!</string>
    <string name="txt_duration">Duration</string>
    <string name="txt_duration_time">Duration</string>
    <string name="txt_error">Error!</string>
    <string name="txt_error_again">Error! Please try again!</string>
    <string name="txt_file_not_found">File not found!</string>
    <string name="txt_first_song">This is the first song!</string>
    <string name="txt_location">Location</string>
    <string name="txt_main_warning_close_app">Do you want to exit?</string>
    <string name="txt_menu_rate">Rate</string>
    <string name="txt_name">Name</string>
    <string name="txt_need_permission">You need to grant permissions to the app</string>
    <string name="txt_new_playlist_exist">Playlist already exists</string>
    <string name="txt_no">No</string>
    <string name="txt_no_search_result">No results</string>
    <string name="txt_now_playing">Current playing</string>
    <string name="txt_open_with">Open with</string>
    <string name="txt_play_all">Play all</string>
    <string name="txt_publish_at">Publish at</string>
    <string name="txt_rating_title">Thanks you for using this app</string>
    <string name="txt_refresh">Refresh</string>
    <string name="txt_search">Download</string>
    <string name="txt_set_ringtone">Set as ringtone</string>
    <string name="txt_song">Songs</string>
    <string name="txt_song_infomation">Song info</string>
    <string name="txt_songs">Songs</string>
    <string name="txt_sure">Sure!</string>
    <string name="txt_test_text">Abc</string>
    <string name="txt_title">Title</string>
    <string name="unknow">Unknown</string>
    <string name="update">Update</string>
    <string name="update_content">Update the new version of Flow Downloader!</string>
    <string name="update_playlist">Update playlist</string>
    <string name="waiting_txt">Waiting …</string>
    <string name="wallpaper_notfound">Wallpaper not found!</string>
    <string name="yes">Yes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
