<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    app:cardBackgroundColor="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#B018CA"
        android:gravity="center"

        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="fill_parent"

            android:layout_height="wrap_content"
            android:background="#D749EF"
            android:fontFamily="@font/san_bold"
            android:gravity="center"
            android:maxLines="2"
            android:padding="8.0dip"
            android:text="@string/txt_song_infomation"
            android:textColor="@color/white"
            android:textSize="18.0sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_artist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_artist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/san_medium"
            android:gravity="center"
            android:maxLines="2"
            android:textColor="@color/white"
            android:paddingLeft="@dimen/dp_8"
            android:paddingRight="@dimen/dp_8"
            android:text="@string/tit_song"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_artist"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_artist">

            <TextView
                android:id="@+id/btn_play_latter"
                style="@style/TextDialogSong"
                android:drawableLeft="@drawable/baseline_skip_next_24"
                android:drawablePadding="15dp"
                android:text="@string/play_next"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/btn_add_playlist"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_thumb" />

            <TextView
                android:id="@+id/btn_add_playlist"
                style="@style/TextDialogSong"
                android:drawableLeft="@drawable/ic_add"
                android:drawablePadding="15dp"
                android:text="@string/txt_add_to_playlist"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/btn_set_ringtone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_play_latter" />

            <TextView
                android:id="@+id/btn_set_ringtone"
                style="@style/TextDialogSong"
                android:drawableLeft="@drawable/baseline_phonelink_ring_24"
                android:drawablePadding="15dp"
                android:text="@string/txt_set_ringtone"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_add_playlist" />

            <TextView
                android:id="@+id/btn_delete"
                style="@style/TextDialogSong"
                android:drawableLeft="@drawable/baseline_delete_24"
                android:drawablePadding="15dp"
                android:drawableTint="@color/white"
                android:text="@string/txt_delete"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_set_ringtone" />

            <TextView
                android:id="@+id/btn_detail"
                style="@style/TextDialogSong"
                android:drawableLeft="@drawable/baseline_info_24"
                android:drawablePadding="15dp"
                android:text="@string/txt_detail"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_delete" />

            <TextView
                android:id="@+id/btn_share"
                style="@style/TextDialogSong"
                android:drawableLeft="@drawable/ic_share"
                android:drawablePadding="15dp"
                android:text="@string/share"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_detail" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>