<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#BF14DC"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_Header"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/_120sdp"
        android:padding="16.0dip"
        android:src="@drawable/song_not_found"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/content_rating"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/san_light"
        android:gravity="center"
        android:padding="16.0dip"
        android:text="@string/txt_content_rating"
        android:textColor="@color/white"
        android:textSize="16.0sp"
        app:layout_constraintTop_toBottomOf="@+id/img_Header" />

    <TextView
        android:id="@+id/btn_rating"
        android:layout_width="150.0dip"
        android:layout_height="wrap_content"
        android:fontFamily="@font/san_bold"
        android:gravity="center"
        android:background="@drawable/rate_bac"
        android:padding="@dimen/dp_8"
        android:text="@string/txt_menu_rate"
        android:textColor="@color/black"
        android:textSize="16.0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@+id/content_rating" />

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="150.0dip"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:gravity="center"
        android:padding="@dimen/dp_8"
        android:layout_margin="15dp"
        android:text="@string/txt_cancel"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_rating"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_rating" />
</androidx.constraintlayout.widget.ConstraintLayout>