<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:id="@+id/navigationBackground"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/db"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="250.0dip"
        android:gravity="bottom|center"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/music" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/san_bold"
            android:gravity="center"
            android:padding="8.0dip"
            android:text="Flow Downloader"
            android:textColor="@color/white"
            android:textSize="22.0sp"
            android:visibility="visible"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="#4CAF50"/>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0"
        android:paddingTop="16.0dip"
        android:paddingBottom="24.0dip">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/menu_theme"
                style="@style/MenuStyle"
                android:visibility="visible"
                android:drawableLeft="@drawable/theme"
                android:text="@string/theme" />

            <TextView
                android:id="@+id/menu_share"
                style="@style/MenuStyle"
                android:drawableLeft="@drawable/ic_share"
                android:text="@string/share" />

            <TextView
                android:id="@+id/menu_policy"
                style="@style/MenuStyle"
                android:visibility="visible"
                android:drawableLeft="@drawable/baseline_policy_24"
                android:text="@string/tit_policy" />

            <TextView
                android:id="@+id/menu_rate"
                style="@style/MenuStyle"
                android:drawableLeft="@drawable/baseline_star_rate_24"
                android:text="@string/txt_menu_rate"
                android:visibility="visible" />
            <TextView
                android:id="@+id/menu_puchase"
                style="@style/MenuStyle"
                android:visibility="visible"
                android:drawableLeft="@drawable/ic_premium"
                android:text="No Ads"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/san_semibold"
        android:padding="4.0dip"
        android:textColor="@color/white"
        android:textSize="16.0sp" />
</LinearLayout>
